--- a/css/logo-nav.css
+++ b/css/logo-nav.css
@@ -4,7 +4,7 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 body {
-    padding-top: 70px; 
+    padding-top: 70px;
     /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
     font-size: 10.71pt;
     font-weight: 300;
@@ -30,11 +30,11 @@ h3 {
     -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
     -moz-animation:fadeIn ease-in 1;
     animation:fadeIn ease-in 1;
- 
+
     -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
     -moz-animation-fill-mode:forwards;
     animation-fill-mode:forwards;
- 
+
     -webkit-animation-duration:1s;
     -moz-animation-duration:1s;
     animation-duration:1s;
@@ -44,7 +44,7 @@ h3 {
 -moz-animation-delay: 0.3s;
 animation-delay: 0.3s;
 }
- 
+
 .fade-in.two {
 -webkit-animation-delay: 0.7s;
 -moz-animation-delay:0.7s;
@@ -81,7 +81,7 @@ a {
     color: #E46E2E;
 }
 .navbar-scroll {
-    box-shadow: 1px 1px 1px #999; 
+    box-shadow: 1px 1px 1px #999;
     -moz-box-shadow: 1px 1px 1px #999;
     -webkit-box-shadow: 1px 1px 1px #999;
     animation-name: smooth;
@@ -111,10 +111,14 @@ a {
     height: 100%;
     text-align: center;
     margin: 0 auto;
-    
+
 }
 .img-container img {
     vertical-align: center;
+}
+#main-logo {
+    height: calc(100% - 20px);
+    margin-top: 10px;
 }
 .header {
     margin: 0 auto;
@@ -177,7 +181,7 @@ a {
     font-size: 21px;
 }
 @media(max-width:1200px) {
-    
+
     .notebook-preview p {
         line-height: 25pt;
         font-size: 15pt;
@@ -200,7 +204,7 @@ a {
 }
 
 .notebook-features p a:hover {
-    color: rgb(224, 103, 29);   
+    color: rgb(224, 103, 29);
 }
 
 
@@ -211,10 +215,10 @@ a {
 }
 
 @media(max-width:1200px) {
-    
+
     .notebook-features .language-set h2{
         padding-top: 0px;
-    }  
+    }
     .notebook-features #feature {
         padding-top: 4px;
     }
@@ -239,7 +243,7 @@ a {
     border-right-style: none;
     border-left-style: none;
     border-width: thin;
-    
+
 }
 .install-prompt .content {
     padding-top: 4%;
@@ -449,11 +453,11 @@ a {
     height: 275px;
     transition: transform 0.3s linear 0s;
     -webkit-transition: -webkit-transform 0.3s linear 0s;
- 
+
     -webkit-backface-visibility: hidden;
        -moz-backface-visibility: hidden;
          -o-backface-visibility: hidden;
-            backface-visibility: hidden;  
+            backface-visibility: hidden;
     position: absolute;
     text-align: center;
 }
@@ -462,11 +466,11 @@ a {
     height: 275px;
     transition: transform 0.3s linear 0s;
     -webkit-transition: -webkit-transform 0.3s linear 0s;
- 
+
     -webkit-backface-visibility: hidden;
        -moz-backface-visibility: hidden;
          -o-backface-visibility: hidden;
-            backface-visibility: hidden;  
+            backface-visibility: hidden;
     position: absolute;
     text-align: center;
 }
@@ -475,11 +479,11 @@ a {
     height: 275px;
     transition: transform 0.3s linear 0s;
     -webkit-transition: -webkit-transform 0.3s linear 0s;
- 
+
     -webkit-backface-visibility: hidden;
        -moz-backface-visibility: hidden;
          -o-backface-visibility: hidden;
-            backface-visibility: hidden;  
+            backface-visibility: hidden;
     position: absolute;
     text-align: center;
 }
@@ -497,13 +501,13 @@ a {
 }
 /* The .back element should be rotated at first, facing his back, hidden*/
 .card .back{
- 
+
     transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg);
 
     text-align: center;
 }
- 
+
 
 
 .arcfeature a {
@@ -546,7 +550,7 @@ a {
 /*About Page */
 
 .header{
-    padding-bottom: 30px; 
+    padding-bottom: 30px;
     text-align: center;
     background-color: #F8F8F8;
 }
@@ -664,7 +668,7 @@ a {
     margin-left: 20px;
     margin-bottom: 10px;
     cursor: default;
-} 
+}
 
 .clicky:hover {
     color: #E46E2E
@@ -888,7 +892,7 @@ a {
         font-size: 13px;
         letter-spacing: 1px;
     }
-    
+
 }
 .community {
     margin: 0 auto;
